# worktools

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/: SECURITY.md  dependabot.yml
.github/workflows/: python-ci.yml
docs/: README.md
docs/python/: allocate_hours.md
python/: README.md  __init__.py  allocate_hours.py  pyproject.toml
python/tests/: __init__.py  test_allocate_hours.py
