[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "worktools"
version = "1.0.0"
description = "A collection of Python productivity tools for daily work tasks"
readme = "README.md"
license = {file = "../LICENSE"}
authors = [
    {name = "Helge Bjerke", email = "helgelb@hotmail.com"}
]
maintainers = [
    {name = "Helge Bjerke", email = "helgelb@hotmail.com"}
]
keywords = ["productivity", "tools", "automation", "utilities", "work"]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.6.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/helgelb/worktools"
Documentation = "https://github.com/helgelb/worktools/blob/main/README.md"
Repository = "https://github.com/helgelb/worktools"
"Bug Tracker" = "https://github.com/helgelb/worktools/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build]
package-mode = false
[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "TCH", # flake8-type-checking
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # Allow star imports in __init__.py
"tests/*.py" = ["D"]  # Skip docstring checks in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
